test/errors/array_types_error/zs/deprecated_implicit_array_error.zs
package deprecated_implicit_array_error;

struct DeprecatedImplicitArrayError
{
    implicit uint8 array[];
};
